--- a/library.bib
+++ b/library.bib
@@ -16,9 +16,9 @@
      TITLE = {Geometry of cuts and metrics},
     SERIES = {Algorithms and Combinatorics},
     VOLUME = {15},
- PUBLISHER = {Springer-Verlag, Berlin},
+ %PUBLISHER = {Springer-Verlag, Berlin},
       YEAR = {1997},
-     PAGES = {xii+587},
+   %  PAGES = {xii+587},
       ISBN = {3-540-61611-X},
    MRCLASS = {52-02 (05B30 05C12 51K05 52B12 52C07 68R05 90C28)},
   MRNUMBER = {1460488},
